name: Hapi
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: /home/maud/Projects/Hapi/LICENSE
description:  
tested-with: GHC -any
data-dir: ""
 
executable Hapi
    build-depends: base -any, concurrent-extra -any, hscurses -any,
                   mtl -any, tasty -any, tasty-hunit -any, unbounded-delays -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: App.Cell App.Direction App.Enemy App.Horus
                   App.Matrix App.Panel App.Stuff App.Tile App.Walker
    ghc-options: -Wall
 
test-suite test-Hapi
    build-depends: base -any, concurrent-extra -any, hscurses -any,
                   mtl -any, tasty -any, tasty-hunit -any, unbounded-delays -any
    type: exitcode-stdio-1.0
    main-is: Test.hs
    buildable: True
    hs-source-dirs: src test test/Test
    ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-missing-signatures
    cpp-options: -DTEST_MODE=true
